2010-11-04  Robert Hogan  <robert@webkit.org>

Reviewed by Andreas Kling.

        [Qt] Clarify expected return values of innerXml(), outerXml()

        If you put HTML in (e.g. using setHTML()) you will get HTML out,
        even if you marked it up as XML.

        https://bugs.webkit.org/show_bug.cgi?id=44876

        * Api/qwebelement.cpp:

Canonical link: https://commits.webkit.org/61804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71315 268f45cc-cd09-0410-ab3c-d52691b4dbfc